<resources>
    <!-- General -->
    <string name="app_name" translatable="false">Debitum</string>
    <string name="error_message_database_access">Error trying to access database. Please try again.\n%1$s</string>
    <string name="button_label_save">Save</string>
    <string name="delete_dialog_confirm">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_gotit">Got it</string>
    <string name="required_helper_text">* Required</string>
    <string name="actionmode_return_item">Mark as returned</string>
    <string name="actionmode_return_money">Create return transaction</string>
    <string name="actionmode_edit">Edit</string>
    <string name="actionmode_delete">Delete</string>
    <plurals name="actionmode_selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="actionmode_sum">Sum: %1$s</string>

    <!-- MainActivity -->
    <string name="fab_content_description">Create Transaction</string>
    <string name="bottom_nav_people">People</string>
    <string name="bottom_nav_money">Money</string>
    <string name="bottom_nav_items">Items</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="dismiss_filter">dismiss filter</string>
    <string name="database_empty">"Nothing recorded yet.\nCreate a new transaction using the \"+\" button below."</string>

    <!-- PersonSumListFragment -->
    <string name="title_fragment_person_sum_list">People</string>
    <string name="person_sum_list_you_owe">You Owe</string>
    <string name="person_sum_list_no_debt">No Debt</string>
    <string name="person_sum_list_you_lent">You Lent</string>
    <string name="toolbar_create_person">Create Person</string>
    <string name="toolbar_sort">Order By</string>
    <string name="toolbar_sort_name_asc">Name (ascending)</string>
    <string name="toolbar_sort_name_desc">Name (descending)</string>
    <string name="toolbar_sort_date_asc">Date (ascending)</string>
    <string name="toolbar_sort_date_desc">Date (descending)</string>
    <string name="toolbar_sort_amount_asc">You Owe Least</string>
    <string name="toolbar_sort_amount_desc">You Owe Most</string>
    <plurals name="person_sum_list_snackbar_deleted">
        <item quantity="one">%d person deleted</item>
        <item quantity="other">%d persons deleted</item>
    </plurals>
    <plurals name="person_sum_list_dialog_delete_title">
        <item quantity="one">Delete %d person?</item>
        <item quantity="other">Delete %d persons?</item>
    </plurals>
    <string name="person_sum_list_dialog_delete_text">This can\'t be undone and will delete transactions to and from them too.</string>

    <!-- TransactionListFragment -->
    <string name="title_fragment_transaction_list_money">Money</string>
    <string name="title_fragment_transaction_list_items">Items</string>
    <string name="transaction_list_gave">Gave</string>
    <string name="transaction_list_received">Received</string>
    <string translatable="false" name="transaction_list_date_given_returned">%1$s\u2013%2$s</string>
    <string name="toolbar_edit_person">Edit Person</string>
    <string name="header_label">Total</string>
    <!-- this will appear in the totals header like "8 items returned"-->
    <string name="header_desc_items_returned">items returned</string>
    <!-- this will appear in the totals header like "8 items lent"-->
    <string name="header_desc_items_lent">items lent</string>
    <!-- this will appear in the totals header like "8 items"-->
    <string name="header_desc_items_all">items</string>
    <string name="item_filter">Filter by returned state</string>
    <string name="item_filter_all">Show all</string>
    <string name="item_filter_unreturned">Show unreturned</string>
    <string name="item_filter_returned">Show returned</string>
    <plurals name="transaction_list_snackbar_deleted">
        <item quantity="one">%d transaction deleted</item>
        <item quantity="other">%d transactions deleted</item>
    </plurals>
    <plurals name="transaction_list_dialog_delete_title">
        <item quantity="one">Delete %d transaction?</item>
        <item quantity="other">Delete %d transactions?</item>
    </plurals>
    <string name="transaction_list_dialog_delete_text">This can\'t be undone.</string>

    <!-- EditTransactionFragment -->
    <string name="title_fragment_edit_transaction_create">Create Transaction</string>
    <string name="title_fragment_edit_transaction">Edit Transaction</string>
    <string name="edit_transaction_hint_person">Person *</string>
    <string name="edit_transaction_error_select_name">Please select a person.</string>
    <string name="edit_transaction_hint_amount_money">Amount *</string>
    <string name="edit_transaction_hint_amount_item">Number of items *</string>
    <string name="edit_transaction_error_enter_amount">Please enter an amount.</string>
    <string name="edit_transaction_error_enter_description">Please enter a description.</string>
    <string name="edit_transaction_hint_desc">Description</string>
    <string name="edit_transaction_hint_desc_item">Description *</string>
    <string name="edit_transaction_wrong_amount_format">Something is wrong with your amount format.</string>
    <string name="edit_transaction_date_dialog_title">Select date</string>
    <string name="edit_transaction_hint_date">Date</string>
    <string name="edit_transaction_hint_returndate">Date returned</string>
    <string name="edit_transaction_gave">Gave</string>
    <string name="edit_transaction_received">Received</string>
    <string name="edit_transaction_snackbar_max_amount">Max. 9 digits allowed</string>
    <string name="debt_settlement_money_description">Debt settlement for \"%1$s\" from %2$s</string>

    <string name="edit_transaction_suspicious_return_date_title">Suspicious return date</string>
    <string name="edit_transaction_suspicious_return_date_message">The set return date (%1$s) occurs before the original transaction. Use anyway?</string>
    <string name="edit_transaction_use_suspicious_return_date">use date</string>

    <string name="edit_transaction_image_delete_desc">Delete Image</string>
    <string name="edit_transaction_image_add_title">Add Image</string>
    <string name="edit_transaction_image_error_copying">Copying image to app directory failed. %1$s</string>
    <string name="edit_transaction_image_error_app_not_found">No app to show an image found on your device.</string>
    <string name="edit_transaction_actionmode_title">Image Selected</string>

    <!-- EditPersonFragment -->
    <string name="title_fragment_edit_person">Edit Person</string>
    <string name="title_fragment_edit_person_create">Create Person</string>
    <string name="edit_person_name">Name</string>
    <string name="error_message_enter_name">Please enter a name.</string>
    <string name="error_message_name_exists">%1$s already exists. Please enter a different name.</string>
    <string name="edit_person_note">Note</string>
    <string name="edit_person_hint_linked_contact">Linked Contact</string>
    <string name="edit_person_hint_no_linked_contact">No Linked Contact</string>
    <string name="edit_person_helper_linked_contact">Unavailable due to missing permissions</string>
    <string name="edit_person_contact_deleted">Previously linked contact is unavailable. Link has been removed.</string>

    <!-- SettingsFragment -->
    <string name="title_fragment_settings">Settings</string>

    <string name="pref_general_header">General</string>

    <string name="pref_nr_decimals_title">Nr of decimals</string>
    <string name="pref_nr_decimals_zero">0</string>
    <string name="pref_nr_decimals_one">1</string>
    <string name="pref_nr_decimals_two">2</string>
    <string name="pref_nr_decimals_three">3</string>
    <string name="decrease_decimals_dialog_confirm">Decrease nr of decimals</string>
    <string name="decrease_decimals_dialog_title">Warning</string>
    <string name="decrease_decimals_dialog_text">Decreasing the number of decimals can cause transaction amounts to be rounded. This loss of information cannot be undone by changing the setting back to the prevoius value.</string>
    <string name="pref_dismiss_filter_title">When dismissing person filter …</string>
    <string name="pref_dismiss_filter_summary_true">Return to list of people</string>
    <string name="pref_dismiss_filter_summary_false">Stay in the current list</string>
    <string name="pref_item_returned_filter_title">Standard item-list filter</string>
    <string name="pref_date_format_title">Date format</string>
    <string name="pref_date_format_systemdefault_short">System default (short)</string>
    <string name="pref_date_format_systemdefault_short_value" translatable="false">SYSTEM_DEFAULT_S</string>
    <string name="pref_date_format_systemdefault_medium">System default (medium)</string>
    <string name="pref_date_format_systemdefault_medium_value" translatable="false">SYSTEM_DEFAULT_M</string>
    <string name="pref_date_format_systemdefault_long">System default (long)</string>
    <string name="pref_date_format_systemdefault_long_value" translatable="false">SYSTEM_DEFAULT_L</string>
    <string name="pref_invert_colors_title">Invert owe/lent colors</string>
    <string name="pref_invert_colors_summary_off">owe: green, lent: red</string>
    <string name="pref_invert_colors_summary_on">owe: red, lent: green</string>

    <string name="pref_maintenance_header">Maintenance</string>
    <string name="backup_successful">Data backed up to chosen location</string>
    <string name="backup_failed">Backup failed %1$s</string>
    <string name="restore_failed">Restoration failed. %1$s</string>
    <string name="restore_not_all_images_restored">Warning: not all images from the backup zip could be restored. %1$s</string>
    <string name="restore_preferences_not_restored">Warning: the app\'s preferences could not be restored. Check your amounts!. %1$s</string>
    <string name="restore_failed_dbFileMissing">Database backup file \'debitum.db\' is missing or unreadable.</string>
    <string name="restore_failed_tmpdir">Could not create or write into temporary directory %1$s</string>
    <string name="pref_backup_title">Backup data</string>
    <string name="pref_restore_title">Restore data</string>
    <string name="pref_restore_summary">from previously created backup zip file</string>
    <string name="pref_restore_file_not_found">Backup file not found</string>

    <string name="pref_info_header">Info</string>
    <string name="pref_faq_title">Frequently Asked Questions</string>
    <string name="pref_github_title">GitHub</string>
    <string name="pref_github_summary">Find and improve the source code, report issues and ideas</string>
    <string name="restore_confirm">Overwrite</string>
    <string name="restore_confirm_text">Overwrite all existing data with data from backup?\nThe app will then be restarted.</string>
    <string name="restore_confirm_title">Restore from Backup</string>

    <string name="pref_version">Version %1$s</string>
    <string name="pref_licenses_title">Libre third-party licenses</string>
    <string name="pref_changelog_title">Changelog</string>

    <!--Transition names-->
    <string name="transition_name_person_filter" translatable="false">TRANSITION_SET_PERSON_FILTER</string>
</resources>
