<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:title="@string/pref_general_header">
        <SwitchPreferenceCompat
            app:key="dismiss_filter_behaviour"
            app:title="@string/pref_dismiss_filter_title"
            app:defaultValue="true"/>
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/itemReturnedFilterModes"
            android:entryValues="@array/itemReturnedFilterModeValues"
            android:key="item_returned_standard_filter"
            android:title="@string/pref_item_returned_filter_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_maintenance_header">

        <Preference
            app:key="backup"
            app:title="@string/pref_backup_title"
            app:summary="@string/pref_backup_summary" />

        <Preference
            app:key="restore"
            app:title="@string/pref_restore_title"
            app:summary="@string/pref_restore_summary" />

        <Preference
            app:icon="@drawable/ic_round_warning_amber_24"
            app:summary="@string/pref_backup_warning" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_info_header">

        <Preference
            app:key="guide"
            app:title="@string/pref_guide_title" />

        <Preference
            app:key="github"
            app:summary="@string/pref_github_summary"
            app:title="@string/pref_github_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/Marmo/debitum" />

        </Preference>
        <Preference
            app:key="licenses"
            app:title="@string/pref_licenses_title" />
        <PreferenceCategory
            app:key="version"
            app:summary="@string/pref_version" />

    </PreferenceCategory>
</PreferenceScreen>