<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miFilterReturnedState"
        android:title="@string/item_filter"
        android:icon="@drawable/ic_outline_filter_alt_24_onprimary"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/miFilterAll"
                android:title="@string/item_filter_all"
                android:icon="@drawable/ic_outline_local_offer_24_controlnormal"
                app:showAsAction="never"/>
            <item
                android:id="@+id/miFilterUnreturned"
                android:title="@string/item_filter_unreturned"
                android:icon="@drawable/ic_item_unreturned_24"
                app:showAsAction="never"/>
            <item
                android:id="@+id/miFilterReturned"
                android:title="@string/item_filter_returned"
                android:icon="@drawable/ic_item_returned_24"/>
        </menu>
    </item>
</menu>