<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/personSumListFragment">

    <fragment
        android:id="@+id/personSumListFragment"
        android:name="org.ebur.debitum.ui.PersonSumListFragment"
        android:label="@string/title_fragment_person_sum_list"
        tools:layout="@layout/fragment_person_sum_list">
        <action
            android:id="@+id/action_personSumListFragment_to_transactionListFragment"
            app:destination="@id/transactionListFragment" />
        <action
            android:id="@+id/action_personSumListFragment_to_editPersonFragment"
            app:destination="@id/editPersonFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionListFragment"
        android:name="org.ebur.debitum.ui.TransactionListFragment"
        android:label="@string/title_fragment_transaction_list"
        tools:layout="@layout/fragment_transaction_list">
        <argument
            android:name="filterBy"
            app:argType="integer" />
        <action
            android:id="@+id/action_transactionListFragment_to_editPersonFragment"
            app:destination="@id/editPersonFragment" />
        <action
            android:id="@+id/action_transactionListFragment_to_editTransactionFragment"
            app:destination="@id/editTransactionFragment" />
    </fragment>
    <fragment
        android:id="@+id/editPersonFragment"
        android:name="org.ebur.debitum.ui.EditPersonFragment"
        android:label="@string/title_fragment_edit_person"
        tools:layout="@layout/fragment_edit_person">
        <argument
            android:name="editedPerson"
            android:defaultValue="@null"
            app:argType="org.ebur.debitum.database.Person"
            app:nullable="true" />
        <action
            android:id="@+id/action_editPersonFragment_to_personSumListFragment"
            app:destination="@id/personSumListFragment"
            app:popUpTo="@id/personSumListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editTransactionFragment"
        android:name="org.ebur.debitum.ui.EditTransactionFragment"
        android:label="@string/title_fragment_edit_transaction" >
        <argument
            android:name="idTransaction"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
</navigation>