<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditTransactionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/bar_elevation">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/dialog_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingEnd="16dp"
                android:paddingStart="6dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_baseline_close_24"
                app:titleTextColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:hint="@string/edit_transaction_hint_person"
                app:startIconDrawable="@drawable/ic_baseline_person_outline_surf_24"
                app:startIconContentDescription="Person"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:helperText="@string/required_helper_text">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroupGaveReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/big_padding"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_name">

                <RadioButton
                    android:id="@+id/radioButton_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/edit_transaction_received"
                    android:textSize="@dimen/text_size_add_transaction" />

                <RadioButton
                    android:id="@+id/radioButton_gave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_transaction_gave"
                    android:textSize="@dimen/text_size_add_transaction" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/switch_monetary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupGaveReceived"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/edit_transaction_hint_amount_money"
                android:singleLine="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_money_24"
                app:startIconContentDescription="Amount"
                app:endIconMode="clear_text"
                app:endIconContentDescription="clear input"
                app:helperTextEnabled="true"
                app:helperText="@string/required_helper_text" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:digits="0123456789.,"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_monetary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:textSize="@dimen/text_size_add_transaction"
                app:layout_constraintTop_toTopOf="@id/edit_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/edit_amount" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_amount"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/edit_transaction_hint_desc"
                android:singleLine="true"
                android:inputType="text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@drawable/ic_baseline_notes_24"
                app:startIconContentDescription="Description"
                app:endIconMode="clear_text"
                app:endIconContentDescription="clear text" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/edit_transaction_date_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_description"
                app:startIconContentDescription="Calendar"
                app:startIconDrawable="@drawable/ic_baseline_event_24"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_arrow_drop_down_24">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>